src/snapshots/redmine_tui_draft__test_support__journals_list_item_component_focused_past_note_without_details.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 32, height: 7 }
00: "aliceが 2026/01/15に 更 新          " | 0:"a" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 1:"l" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 2:"i" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 3:"c" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 4:"e" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 5:"が" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 7:"2" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 8:"0" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 9:"2" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 10:"6" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 11:"/" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 12:"0" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 13:"1" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 14:"/" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 15:"1" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 16:"5" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 17:"に" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 19:"更" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 21:"新" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 23:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 24:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 25:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 26:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 27:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 28:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 29:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 30:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 31:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE
01: "                                " | 0:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 1:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 2:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 3:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 4:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 5:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 6:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 7:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 8:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 9:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 10:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 11:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 12:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 13:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 14:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 15:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 16:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 17:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 18:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 19:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 20:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 21:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 22:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 23:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 24:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 25:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 26:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 27:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 28:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 29:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 30:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 31:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE
02: "                                " | 0:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 1:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 2:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 3:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 4:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 5:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 6:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 7:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 8:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 9:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 10:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 11:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 12:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 13:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 14:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 15:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 16:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 17:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 18:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 19:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 20:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 21:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 22:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 23:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 24:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 25:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 26:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 27:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 28:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 29:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 30:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 31:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE
03: "first paragraph                 " | 0:"f" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 1:"i" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 2:"r" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 3:"s" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 4:"t" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 5:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 6:"p" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 7:"a" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 8:"r" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 9:"a" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 10:"g" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 11:"r" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 12:"a" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 13:"p" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 14:"h" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 15:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 16:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 17:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 18:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 19:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 20:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 21:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 22:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 23:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 24:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 25:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 26:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 27:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 28:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 29:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 30:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 31:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE
04: "                                " | 0:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 1:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 2:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 3:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 4:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 5:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 6:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 7:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 8:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 9:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 10:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 11:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 12:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 13:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 14:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 15:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 16:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 17:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 18:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 19:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 20:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 21:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 22:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 23:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 24:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 25:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 26:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 27:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 28:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 29:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 30:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 31:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE
05: "second paragraph with wrapping  " | 0:"s" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 1:"e" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 2:"c" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 3:"o" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 4:"n" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 5:"d" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 6:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 7:"p" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 8:"a" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 9:"r" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 10:"a" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 11:"g" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 12:"r" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 13:"a" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 14:"p" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 15:"h" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 16:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 17:"w" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 18:"i" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 19:"t" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 20:"h" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 21:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 22:"w" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 23:"r" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 24:"a" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 25:"p" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 26:"p" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 27:"i" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 28:"n" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 29:"g" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 30:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 31:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE
06: "words                           " | 0:"w" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 1:"o" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 2:"r" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 3:"d" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 4:"s" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 5:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 6:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 7:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 8:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 9:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 10:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 11:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 12:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 13:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 14:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 15:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 16:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 17:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 18:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 19:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 20:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 21:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 22:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 23:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 24:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 25:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 26:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 27:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 28:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 29:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 30:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 31:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE
