src/snapshots/redmine_tui_draft__test_support__journals_list_item_component_initial_unfocused.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 32, height: 9 }
00: "aliceが 2026/01/15に 更 新          " | 0:"a" fg=Blue bg=Reset mod=NONE, 1:"l" fg=Blue bg=Reset mod=NONE, 2:"i" fg=Blue bg=Reset mod=NONE, 3:"c" fg=Blue bg=Reset mod=NONE, 4:"e" fg=Blue bg=Reset mod=NONE, 5:"が" fg=Reset bg=Reset mod=NONE, 7:"2" fg=Blue bg=Reset mod=NONE, 8:"0" fg=Blue bg=Reset mod=NONE, 9:"2" fg=Blue bg=Reset mod=NONE, 10:"6" fg=Blue bg=Reset mod=NONE, 11:"/" fg=Blue bg=Reset mod=NONE, 12:"0" fg=Blue bg=Reset mod=NONE, 13:"1" fg=Blue bg=Reset mod=NONE, 14:"/" fg=Blue bg=Reset mod=NONE, 15:"1" fg=Blue bg=Reset mod=NONE, 16:"5" fg=Blue bg=Reset mod=NONE, 17:"に" fg=Reset bg=Reset mod=NONE, 19:"更" fg=Reset bg=Reset mod=NONE, 21:"新" fg=Reset bg=Reset mod=NONE
01: "                                "
02: "  ・  ス テ ー タ ス  を  新 規  か ら  進  " | 0:" " fg=Gray bg=Reset mod=NONE, 1:" " fg=Gray bg=Reset mod=NONE, 2:"・" fg=Gray bg=Reset mod=NONE, 4:" " fg=Gray bg=Reset mod=NONE, 5:"ス" fg=Gray bg=Reset mod=BOLD, 7:"テ" fg=Gray bg=Reset mod=BOLD, 9:"ー" fg=Gray bg=Reset mod=BOLD, 11:"タ" fg=Gray bg=Reset mod=BOLD, 13:"ス" fg=Gray bg=Reset mod=BOLD, 15:" " fg=Gray bg=Reset mod=NONE, 16:"を" fg=Gray bg=Reset mod=NONE, 18:" " fg=Gray bg=Reset mod=NONE, 19:"新" fg=Gray bg=Reset mod=ITALIC, 21:"規" fg=Gray bg=Reset mod=ITALIC, 23:" " fg=Gray bg=Reset mod=NONE, 24:"か" fg=Gray bg=Reset mod=NONE, 26:"ら" fg=Gray bg=Reset mod=NONE, 28:" " fg=Gray bg=Reset mod=NONE, 29:"進" fg=Gray bg=Reset mod=ITALIC
03: "  ・  担 当 者  を  (な し ) か ら  bob  " | 0:" " fg=Gray bg=Reset mod=NONE, 1:" " fg=Gray bg=Reset mod=NONE, 2:"・" fg=Gray bg=Reset mod=NONE, 4:" " fg=Gray bg=Reset mod=NONE, 5:"担" fg=Gray bg=Reset mod=BOLD, 7:"当" fg=Gray bg=Reset mod=BOLD, 9:"者" fg=Gray bg=Reset mod=BOLD, 11:" " fg=Gray bg=Reset mod=NONE, 12:"を" fg=Gray bg=Reset mod=NONE, 14:" " fg=Gray bg=Reset mod=NONE, 15:"(" fg=Gray bg=Reset mod=ITALIC, 16:"な" fg=Gray bg=Reset mod=ITALIC, 18:"し" fg=Gray bg=Reset mod=ITALIC, 20:")" fg=Gray bg=Reset mod=ITALIC, 21:" " fg=Gray bg=Reset mod=NONE, 22:"か" fg=Gray bg=Reset mod=NONE, 24:"ら" fg=Gray bg=Reset mod=NONE, 26:" " fg=Gray bg=Reset mod=NONE, 27:"b" fg=Gray bg=Reset mod=ITALIC, 28:"o" fg=Gray bg=Reset mod=ITALIC, 29:"b" fg=Gray bg=Reset mod=ITALIC, 30:" " fg=Gray bg=Reset mod=NONE
04: "                                "
05: "first paragraph                 " | 0:"f" fg=Reset bg=Reset mod=NONE, 1:"i" fg=Reset bg=Reset mod=NONE, 2:"r" fg=Reset bg=Reset mod=NONE, 3:"s" fg=Reset bg=Reset mod=NONE, 4:"t" fg=Reset bg=Reset mod=NONE, 6:"p" fg=Reset bg=Reset mod=NONE, 7:"a" fg=Reset bg=Reset mod=NONE, 8:"r" fg=Reset bg=Reset mod=NONE, 9:"a" fg=Reset bg=Reset mod=NONE, 10:"g" fg=Reset bg=Reset mod=NONE, 11:"r" fg=Reset bg=Reset mod=NONE, 12:"a" fg=Reset bg=Reset mod=NONE, 13:"p" fg=Reset bg=Reset mod=NONE, 14:"h" fg=Reset bg=Reset mod=NONE
06: "                                "
07: "second paragraph with wrapping  " | 0:"s" fg=Reset bg=Reset mod=NONE, 1:"e" fg=Reset bg=Reset mod=NONE, 2:"c" fg=Reset bg=Reset mod=NONE, 3:"o" fg=Reset bg=Reset mod=NONE, 4:"n" fg=Reset bg=Reset mod=NONE, 5:"d" fg=Reset bg=Reset mod=NONE, 7:"p" fg=Reset bg=Reset mod=NONE, 8:"a" fg=Reset bg=Reset mod=NONE, 9:"r" fg=Reset bg=Reset mod=NONE, 10:"a" fg=Reset bg=Reset mod=NONE, 11:"g" fg=Reset bg=Reset mod=NONE, 12:"r" fg=Reset bg=Reset mod=NONE, 13:"a" fg=Reset bg=Reset mod=NONE, 14:"p" fg=Reset bg=Reset mod=NONE, 15:"h" fg=Reset bg=Reset mod=NONE, 17:"w" fg=Reset bg=Reset mod=NONE, 18:"i" fg=Reset bg=Reset mod=NONE, 19:"t" fg=Reset bg=Reset mod=NONE, 20:"h" fg=Reset bg=Reset mod=NONE, 22:"w" fg=Reset bg=Reset mod=NONE, 23:"r" fg=Reset bg=Reset mod=NONE, 24:"a" fg=Reset bg=Reset mod=NONE, 25:"p" fg=Reset bg=Reset mod=NONE, 26:"p" fg=Reset bg=Reset mod=NONE, 27:"i" fg=Reset bg=Reset mod=NONE, 28:"n" fg=Reset bg=Reset mod=NONE, 29:"g" fg=Reset bg=Reset mod=NONE
08: "words                           " | 0:"w" fg=Reset bg=Reset mod=NONE, 1:"o" fg=Reset bg=Reset mod=NONE, 2:"r" fg=Reset bg=Reset mod=NONE, 3:"d" fg=Reset bg=Reset mod=NONE, 4:"s" fg=Reset bg=Reset mod=NONE
