src/snapshots/redmine_tui_draft__test_support__journals_list_item_component_local_journal_unfocused.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 32, height: 7 }
00: "ロ ー カ ル Journal                 " | 0:"ロ" fg=Reset bg=Reset mod=NONE, 2:"ー" fg=Reset bg=Reset mod=NONE, 4:"カ" fg=Reset bg=Reset mod=NONE, 6:"ル" fg=Reset bg=Reset mod=NONE, 8:"J" fg=Reset bg=Reset mod=NONE, 9:"o" fg=Reset bg=Reset mod=NONE, 10:"u" fg=Reset bg=Reset mod=NONE, 11:"r" fg=Reset bg=Reset mod=NONE, 12:"n" fg=Reset bg=Reset mod=NONE, 13:"a" fg=Reset bg=Reset mod=NONE, 14:"l" fg=Reset bg=Reset mod=NONE
01: "                                "
02: "                                "
03: "first paragraph                 " | 0:"f" fg=Reset bg=Reset mod=NONE, 1:"i" fg=Reset bg=Reset mod=NONE, 2:"r" fg=Reset bg=Reset mod=NONE, 3:"s" fg=Reset bg=Reset mod=NONE, 4:"t" fg=Reset bg=Reset mod=NONE, 6:"p" fg=Reset bg=Reset mod=NONE, 7:"a" fg=Reset bg=Reset mod=NONE, 8:"r" fg=Reset bg=Reset mod=NONE, 9:"a" fg=Reset bg=Reset mod=NONE, 10:"g" fg=Reset bg=Reset mod=NONE, 11:"r" fg=Reset bg=Reset mod=NONE, 12:"a" fg=Reset bg=Reset mod=NONE, 13:"p" fg=Reset bg=Reset mod=NONE, 14:"h" fg=Reset bg=Reset mod=NONE
04: "                                "
05: "second paragraph with wrapping  " | 0:"s" fg=Reset bg=Reset mod=NONE, 1:"e" fg=Reset bg=Reset mod=NONE, 2:"c" fg=Reset bg=Reset mod=NONE, 3:"o" fg=Reset bg=Reset mod=NONE, 4:"n" fg=Reset bg=Reset mod=NONE, 5:"d" fg=Reset bg=Reset mod=NONE, 7:"p" fg=Reset bg=Reset mod=NONE, 8:"a" fg=Reset bg=Reset mod=NONE, 9:"r" fg=Reset bg=Reset mod=NONE, 10:"a" fg=Reset bg=Reset mod=NONE, 11:"g" fg=Reset bg=Reset mod=NONE, 12:"r" fg=Reset bg=Reset mod=NONE, 13:"a" fg=Reset bg=Reset mod=NONE, 14:"p" fg=Reset bg=Reset mod=NONE, 15:"h" fg=Reset bg=Reset mod=NONE, 17:"w" fg=Reset bg=Reset mod=NONE, 18:"i" fg=Reset bg=Reset mod=NONE, 19:"t" fg=Reset bg=Reset mod=NONE, 20:"h" fg=Reset bg=Reset mod=NONE, 22:"w" fg=Reset bg=Reset mod=NONE, 23:"r" fg=Reset bg=Reset mod=NONE, 24:"a" fg=Reset bg=Reset mod=NONE, 25:"p" fg=Reset bg=Reset mod=NONE, 26:"p" fg=Reset bg=Reset mod=NONE, 27:"i" fg=Reset bg=Reset mod=NONE, 28:"n" fg=Reset bg=Reset mod=NONE, 29:"g" fg=Reset bg=Reset mod=NONE
06: "words                           " | 0:"w" fg=Reset bg=Reset mod=NONE, 1:"o" fg=Reset bg=Reset mod=NONE, 2:"r" fg=Reset bg=Reset mod=NONE, 3:"d" fg=Reset bg=Reset mod=NONE, 4:"s" fg=Reset bg=Reset mod=NONE
